♻️ Refactor(#86): 버튼 디자인 클래스 생성 및 버튼 컴포넌트 개선 (#89)
* 🎨 design(#86): 색상별 버튼 클래스 생성

* ♻️  refactor(#86): 버튼 클래스 리팩토링 (자주 사용하는 버튼 컴포넌트화)

* 🛠  fix(#86): 버튼 컴포넌트 반응형 수정

* ♻️  refactor(#86): 기존 버튼에 버튼 스타일 적용

* 🎨 design(#86): 버튼 디자인 적용

* 🎨 design(#86): 로그인/회원가입 버튼 디자인 적용

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,23 @@
     @apply font-pretendard font-normal;
   }
 }
+
+@layer components {
+  .btn-violet {
+    @apply align-center disabled:bg-violet-disabled rounded-[8px] bg-violet text-white transition-all hover:bg-violet-hover active:bg-violet-active;
+  }
+
+  .btn-violet-light {
+    @apply align-center disabled:bg-violet-light-disabled rounded-[8px] border border-gray-d9 bg-white transition-all hover:bg-violet-light-hover active:bg-violet-light-active;
+  }
+
+  .btn-white {
+    @apply align-center disabled:bg-white-disabled rounded-[8px] border border-gray-d9 bg-white text-gray-78 transition-all hover:bg-white-hover active:bg-white-active;
+  }
+}
+
+@layer utilities {
+  .align-center {
+    @apply flex items-center justify-center;
+  }
+}
