✨ Feat(#8): 프로필 수정 기능 (#100)
* 🎨 design(#8): 프로필 변경 섹션 디자인

* ✨ feat(#8): 입력폼 내부기능 완성 (API 연결 X)

* ✨ feat(#8): 프로필변경 API 연결 (내부정보 업데이트 X)

* ✨ feat(#8): 프로필 변경시 유저 정보 업데이트

- userSlice에서 accessToken이 string | null이므로 함수에서도 같은 타입을 받도록 함

* 🛠  fix(#9): 헤더에서 에러 정보를 유저정보대신 표시하지 않도록 함

* ↔️  style(#9): 안쓰게 된 import 삭제

* ⚙️  chore(#9): 프로필 이미지 받아올 수 있게 next.config.mjs 설정

* 🎨 design(#9): 프로필 이미지 디자인 수정

- 비율 유지
- 둥근 테두리

* ✨ feat(#8): 닉네임 유효성 검사

- 길이 1자 이상 10자 이하

* ✨ feat(#8):  프로필 이미지 삭제 기능 추가 + 업데이트 폼에서 정보 선택적으로 전달하도록 변경

* 🎨 design(#8): 이미지 인풋 호버, 클릭시 효과 적용

* 🛠  fix(#8, #73): tanstack query 업그레이드에 따른 훅과 사용처 수정"

* 🎨 design(#8): label 반응형 크기 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,22 @@
   .btn-white {
     @apply align-center disabled:bg-white-disabled rounded-[8px] border border-gray-d9 bg-white text-gray-78 transition-all hover:bg-white-hover active:bg-white-active;
   }
+
+  .btn-gray {
+    @apply align-center bg-gray-f5 rounded-md hover:bg-gray-ee active:bg-gray-d9;
+  }
+
+  .section-title {
+    @apply text-xl font-bold md:text-2xl;
+  }
+
+  .label {
+    @apply h-[19px] text-base font-medium md:h-[21px] md:text-lg;
+  }
+
+  .input {
+    @apply flex h-[42px] w-full items-center rounded-md border border-gray-d9 bg-white px-4 text-sm outline-none placeholder:text-gray-9f invalid:border-2 invalid:border-red focus:border-2 focus:border-violet disabled:text-gray-9f md:h-12 md:text-base;
+  }
 }
 
 @layer utilities {
