✨ Feat: 초대 내역 컴포넌트 (#116)
* 🎨 design(#23): 초대내역 컴포넌트 반응형 디자인

* ✨ feat(#23): 초대내역 불러오기 기능 구현 (페이지내이션)

* 🛠  fix(#23): ol의 모든 자식 태그에 고유한 key 부여

* ✨ feat(#23): 초대 취소 기능 구현

* ♻️  refactor(#23): useDeleteData 훅으로 다른 delete 함수들도 호출할 수 있도록 함

* ✨ feat(#23): 페이지네이션 텍스트 없이 사용 가능하게 변경

* ♻️  refactor(#23): 기존 코드에서도 페이지네이션 컴포넌트 사용하도록 변경

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,10 @@
     @apply align-center bg-gray-f5 rounded-md hover:bg-gray-ee active:bg-gray-d9;
   }
 
+  .section {
+    @apply w-full max-w-[620px] rounded-lg bg-white px-5 md:px-7;
+  }
+
   .section-title {
     @apply text-xl font-bold md:text-2xl;
   }
