🛠  fix(#137): 드롭다운 클릭효과 범위 수정 (#139)
* 🛠  fix(#137): 드롭다운 클릭효과 범위 수정

* 🎨 design(#137): 잘 보이게 크기 수정

* 🛠  fix(#137): 전역에서 드롭다운 닫을 수 있도록 변경

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -50,7 +50,7 @@
   }
 
   .dd-menu {
-    @apply align-center h-[30px] w-full rounded-sm text-xs hover:bg-violet-f1 active:bg-violet-e8 md:h-8 md:text-sm;
+    @apply align-center h-[30px] w-full rounded-md hover:bg-violet-f1 active:bg-violet-e8 md:h-8;
   }
 
   .modal {
