🎨 Design(#153): 다크 모드 설정 (#197)
* 🎨 design(#153): 다크 모드 추가

* 🎨 design(#153): 내 대시보드 페이지 다크 모드 추가

* 🎨 design(#153): 모든 페이지, 모달 다크 모드 추가

* 🎨 design(#153): 할 일 모달 댓글 다크모드 적용

* 🎨 design(#153): 테마 버튼 수정

* 🎨 design(#153): 버튼 디자인 수정

* 🎨 design(#153): 취소 버튼 색상 변경

* 🎨 design(#153): 로그인, 회원가입 페이지 다크모드 적용

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,15 +10,19 @@
 
 @layer components {
   .btn-violet {
-    @apply align-center rounded-[8px] bg-violet text-white transition-all hover:bg-violet-hover active:bg-violet-active disabled:bg-violet-disabled;
+    @apply align-center rounded-[8px] bg-violet text-white transition-all hover:bg-violet-hover active:bg-violet-active disabled:bg-violet-disabled dark:bg-dark-purple dark:text-white dark:hover:bg-dark-purple-hover dark:active:bg-dark-purple-hover/50 dark:disabled:bg-dark-purple/50;
   }
 
   .btn-violet-light {
     @apply align-center gray-border rounded-[8px] bg-white transition-all hover:bg-violet-light-hover active:bg-violet-light-active disabled:bg-violet-light-disabled disabled:text-gray-78;
   }
 
+  .btn-violet-dark {
+    @apply align-center rounded-[8px] bg-dark text-dark-10 transition-all hover:bg-dark-purple-hover active:bg-dark-purple disabled:bg-dark-200;
+  }
+
   .btn-white {
-    @apply align-center gray-border rounded-[8px] bg-white text-gray-78 transition-all hover:bg-white-hover active:bg-white-active disabled:bg-white-disabled;
+    @apply align-center gray-border rounded-[8px] bg-white text-gray-78 transition-all hover:bg-white-hover active:bg-white-active disabled:bg-white-disabled dark:bg-dark-300 dark:text-dark-10 dark:hover:bg-dark-200 dark:active:bg-dark-200/50 dark:disabled:bg-dark-400;
   }
 
   .btn-gray {
@@ -42,7 +46,7 @@
   }
 
   .input {
-    @apply gray-border flex h-[42px] w-full items-center rounded-md bg-white px-4 text-sm outline-none placeholder:text-gray-9f invalid:border-2 invalid:border-red focus:border-2 focus:border-violet disabled:text-gray-9f md:h-12 md:text-base;
+    @apply gray-border flex h-[42px] w-full items-center rounded-md bg-white px-4 text-sm outline-none placeholder:text-gray-9f invalid:border-2 invalid:border-red focus:border-2 focus:border-violet disabled:text-gray-9f md:h-12 md:text-base dark:bg-dark-300;
   }
 
   .dd-container {
@@ -50,11 +54,11 @@
   }
 
   .dd-menu {
-    @apply align-center h-[30px] w-full rounded-md hover:bg-violet-f1 active:bg-violet-e8 md:h-8;
+    @apply align-center h-[30px] w-full rounded-md hover:bg-violet-f1 active:bg-violet-e8 md:h-8 dark:text-dark-10 dark:hover:bg-dark-200/50 dark:active:bg-dark-200;
   }
 
   .modal {
-    @apply rounded-[8px] bg-white px-5 py-7 text-base text-black-33 md:px-7 md:text-lg;
+    @apply rounded-[8px] bg-white px-5 py-7 text-base text-black-33 md:px-7 md:text-lg dark:bg-dark-bg dark:text-dark-10;
   }
 
   .modal-basic {
@@ -175,6 +179,6 @@
   }
 
   .gray-border {
-    @apply border border-gray-d9;
+    @apply border border-gray-d9 dark:border-dark-200;
   }
 }
