✨ Feat(#209): 폰트 적용 (#219)
* 🎨 design(#209): 나눔고딕, Pretendard 폰트 적용

* 🎨 design(#209): 프로필 아이콘에 나눔고딕 폰트 적용

* 🛠  fix(#219): font weight 400 기본 설정 다시 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,11 @@
   }
 }
 
+.font-nanumgothic {
+  font-family: 'Nanum Gothic', sans-serif;
+  font-weight: 700;
+}
+
 @layer components {
   .btn-violet {
     @apply align-center rounded-[8px] bg-violet text-white transition-all hover:bg-violet-hover active:bg-violet-active disabled:bg-violet-disabled dark:bg-dark-purple dark:text-white dark:hover:bg-dark-purple-hover dark:active:bg-dark-purple-hover/50 dark:disabled:bg-dark-purple/50;
