🎨 design(#217): 다크모드 수정 (#218)
* 🎨 design(#217): 다크모드 수정

* 🎨 design(#153): 다크모드로 바뀐 버튼 디자인 복귀

---------

Co-authored-by: un0211 <un0211@kaist.ac.kr>

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,7 +63,7 @@
   }
 
   .modal {
-    @apply rounded-[8px] bg-white px-5 py-7 text-base text-black-33 md:px-7 md:text-lg dark:bg-dark-bg dark:text-dark-10;
+    @apply dark:bg-dark-450 rounded-[8px] bg-white px-5 py-7 text-base text-black-33 md:px-7 md:text-lg dark:text-dark-10;
   }
 
   .modal-basic {
