--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,7 @@
 
 @layer components {
   .btn-violet {
-    @apply align-center rounded-[8px] bg-violet text-white transition-all hover:bg-violet-hover active:bg-violet-active disabled:bg-violet-disabled dark:bg-dark-purple dark:text-white dark:hover:bg-dark-purple-hover dark:active:bg-dark-purple-hover/50 dark:disabled:bg-dark-purple/50;
+    @apply align-center dark:bg-dark-purple dark:hover:bg-dark-purple-hover dark:active:bg-dark-purple-hover/50 dark:disabled:bg-dark-purple/50 rounded-[8px] bg-violet text-white transition-all hover:bg-violet-hover active:bg-violet-active disabled:bg-violet-disabled dark:text-white;
   }
 
   .btn-violet-light {
@@ -23,11 +23,11 @@
   }
 
   .btn-violet-dark {
-    @apply align-center rounded-[8px] bg-dark text-dark-10 transition-all hover:bg-dark-purple-hover active:bg-dark-purple disabled:bg-dark-200;
+    @apply align-center text-dark-10 hover:bg-dark-purple-hover active:bg-dark-purple rounded-[8px] bg-dark transition-all disabled:bg-dark-200;
   }
 
   .btn-white {
-    @apply align-center gray-border rounded-[8px] bg-white text-gray-78 transition-all hover:bg-white-hover active:bg-white-active disabled:bg-white-disabled dark:bg-dark-300 dark:text-dark-10 dark:hover:bg-dark-200 dark:active:bg-dark-200/50 dark:disabled:bg-dark-400;
+    @apply align-center gray-border dark:text-dark-10 rounded-[8px] bg-white text-gray-78 transition-all hover:bg-white-hover active:bg-white-active disabled:bg-white-disabled dark:bg-dark-300 dark:hover:bg-dark-200 dark:active:bg-dark-200/50 dark:disabled:bg-dark-400;
   }
 
   .btn-gray {
@@ -59,15 +59,19 @@
   }
 
   .dd-menu {
-    @apply align-center h-[30px] w-full rounded-md hover:bg-violet-f1 active:bg-violet-e8 md:h-8 dark:text-dark-10 dark:hover:bg-dark-200/50 dark:active:bg-dark-200;
+    @apply align-center dark:text-dark-10 h-[30px] w-full rounded-md hover:bg-violet-f1 active:bg-violet-e8 md:h-8 dark:hover:bg-dark-200/50 dark:active:bg-dark-200;
   }
 
   .modal {
-    @apply dark:bg-dark-450 rounded-[8px] bg-white px-5 py-7 text-base text-black-33 md:px-7 md:text-lg dark:text-dark-10;
+    @apply dark:bg-dark-450 dark:text-dark-10 rounded-[8px] bg-white px-5 py-7 text-base text-black-33 md:px-7 md:text-lg;
   }
 
   .modal-basic {
     @apply h-[220px] w-[327px] md:h-[250px] md:w-[540px];
+  }
+
+  .header-divider {
+    @apply h-[34px] w-0 border-l border-gray-d9 dark:border-dark-200;
   }
 
   .scrollbar-white {
